external-crates/move/crates/move-compiler/tests/move_check/expansion/weird_apply_assign.move
module 0x42::M {
    struct S { f: u64 }
    fun foo() {
        let _f: u64;
        { f } = S { f: 0 };

        S f = S { f: 0 };
    }
}
